# backbone-python

./: .gitignore  README.md  main.py  pyproject.toml  startup.py  test_client.py  tooling.py  unasync.py
backbone/: __init__.py  __main__.py  constants.py  crypto.py  exceptions.py  models.py
backbone/cli/: __init__.py  config.py  entry.py  namespace.py  user.py  utilities.py  workspace.py
backbone/core/: __init__.py  entry.py  namespace.py  token.py  user.py  workspace.py
backbone/sync/: __init__.py  entry.py  namespace.py  token.py  user.py  workspace.py
demo/: create.py  login_read.py  login_write.py  utils.py
kryptos/: __init__.py  __main__.py  cli.py  core.py  crypto.py  models.py
kryptos/cli/: __init__.py  config.py  entry.py  namespace.py  user.py  utilities.py
kryptos/core/: __init__.py
kryptos/sync/: __init__.py
test/: client.py  manual.py
tests/: conftest.py  test_integration.py
tests/core/: conftest.py  test_environment.py  test_store.py  test_token.py  test_user.py  test_workspace.py  utilities.py
tests/sync/: conftest.py  test_environment.py  test_integration.py  test_store.py  test_token.py  test_user.py  test_workspace.py  utilities.py
