[tool.poetry]
name = "kryptos-sdk"
version = "0.1.0"
description = "Tools to develop applications with Kryptos."
authors = ["Kryptos Authors <contact@whatdomain.fuckme>"]
license = "Proprietary"
packages = [{ include = "kryptos" }]

[tool.poetry.scripts]
kryptos = 'kryptos:main'

[tool.poetry.dependencies]
python = "^3.7"
PyNaCl = "^1.4.0"
httpx = "^0.17.0"
halo = "^0.0.31"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
