[tool.poetry]
name = "backbone-sdk"
version = "0.1.0"
description = "Tools for development with Backbone"
authors = ["Backbone Developers <inbox@backbone.dev>"]
license = "Proprietary"
packages = [{ include = "backbone" }]

[tool.poetry.scripts]
backbone = 'backbone:main'

[tool.poetry.dependencies]
python = "^3.7"
PyNaCl = "^1.4.0"
httpx = "^0.17.0"
halo = "^0.0.31"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
